--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,33 @@
 @media screen and (min-width: 480px) and (max-width: 600px){
-	
+	.draggable_hour_1,.draggable_hour_2,.draggable_hour_3,
+	.draggable_hour_4,.draggable_hour_5,.draggable_hour_6
+	{
+		width: 375px;
+	}
 }
-@media screen and (min-width: 600px) and (max-width: 800px){
+@media screen and (min-width: 600px) and (max-width: 768px){
+	.draggable_hour_1,.draggable_hour_2,.draggable_hour_3,
+	.draggable_hour_4,.draggable_hour_5,.draggable_hour_6
+	{
+		min-height: 30px;
+		width: 485px;
+	}
+	.new_user_input
+	{
+		width: 450px
+	}
+	.photo_container
+	{
+		display: inline-block;
+	}
+}
+@media screen and (min-width: 768px) and (max-width: 800px){
+	.draggable_hour_1,.draggable_hour_2,.draggable_hour_3,
+	.draggable_hour_4,.draggable_hour_5,.draggable_hour_6
+	{
+		min-height: 30px;
+		width: 650px;
+	}
 	.new_user_input
 	{
 		width: 450px
@@ -120,29 +146,11 @@
 		position:absolute;
 		top: 100%;
 	}
-	.draggable_hour_1
+	.draggable_hour_1,.draggable_hour_2,.draggable_hour_3,
+	.draggable_hour_4,.draggable_hour_5,.draggable_hour_6
 	{
-		width: 100px;
-	}
-	.draggable_hour_2
-	{
-		width: 100px;
-	}
-	.draggable_hour_3
-	{
-		width: 100px;
-	}
-	.draggable_hour_4
-	{
-		width: 100px;
-	}
-	.draggable_hour_5
-	{
-		width: 100px;
-	}
-	.draggable_hour_6
-	{
-		width: 100px;
+		min-height: 30px;
+		width: 700px;
 	}
 	.new_user_input
 	{
@@ -240,6 +248,17 @@
 		padding: 0.5em 0;
 		text-decoration: none;
 	}
+	#agenda,#departments, #donator, #patients, #lab_survey
+	{
+		font-size: 0.8em;
+		padding: 0.2em 0.5em 0.2em 1em;
+	}
+	#agenda a:after
+	{
+		color: white;
+		content: "AGENDA";
+		font-family: "icomoon";
+	}
 	#up_content ul
 	{
 		display: block;
@@ -298,17 +317,6 @@
 	{
 		display: block;
 		margin: 0 30px;
-	}
-	#agenda,#departments, #donator, #patients, #lab_survey
-	{
-		font-size: 0.8em;
-		padding: 0.2em 0.5em 0.2em 1em;
-	}
-	#agenda a:after
-	{
-		color: white;
-		content: "AGENDA";
-		font-family: "icomoon";
 	}
 	#departments a:after
 	{
@@ -447,29 +455,11 @@
 	font-size: 0.8em;
 	width: 90%;
 }
-	.draggable_hour_1
+	.draggable_hour_1,.draggable_hour_2,.draggable_hour_3,
+	.draggable_hour_4,.draggable_hour_5,.draggable_hour_6
 	{
-		width: 120px;
-	}
-	.draggable_hour_2
-	{
-		width: 120px;
-	}
-	.draggable_hour_3
-	{
-		width: 120px;
-	}
-	.draggable_hour_4
-	{
-		width: 120px;
-	}
-	.draggable_hour_5
-	{
-		width: 120px;
-	}
-	.draggable_hour_6
-	{
-		width: 120px;
+		min-height: 30px;
+		width: 600px;
 	}
 	.fields_holder
 	{
@@ -534,6 +524,15 @@
 	#photos_holder
 	{
 		display: inline-block;
+	}
+	.hour_row
+	{
+		background: #bdc3c7;
+		border-bottom: 1px solid #7f8c8d;
+		border-left: 1px solid #95a5a6;
+		border-right: 1px solid #95a5a6;
+		height: 30px;
+		padding: 0;
 	}
 	.photo_container
 	{
@@ -803,31 +802,46 @@
 	}
 	.draggable_hour_1
 	{
+		min-height: 30px;
 		width: 800px;
 	}
 	.draggable_hour_2
 	{
+		min-height: 30px;
 		width: 800px;
 	}
 	.draggable_hour_3
 	{
+		min-height: 30px;
 		width: 800px;
 	}
 	.draggable_hour_4
 	{
+		min-height: 30px;
 		width: 800px;
 	}
 	.draggable_hour_5
 	{
+		min-height: 30px;
 		width: 800px;
 	}
 	.draggable_hour_6
 	{
+		min-height: 30px;
 		width: 800px;
 	}
 	.fields_holder
 	{
 		margin: 0 0 0 20px; 
+	}
+	.hour_row
+	{
+		background: #bdc3c7;
+		border-bottom: 1px solid #7f8c8d;
+		border-left: 1px solid #95a5a6;
+		border-right: 1px solid #95a5a6;
+		height: 30px;
+		padding: 0;
 	}
 	.new_user_input
 	{
