--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,18 @@ th
 	content: "\e619";
 	font-family: "icomoon";
 }
+#new_user_continue
+{
+	background: #FFBC00;
+	border: transparent;
+	border-bottom: 3px solid #704b00;
+	border-radius: 0.3em;
+	color: #704B00;
+	float: right;
+	margin: 1em 1.1em 1em 0;
+	outline: none;
+	padding: 0.5em 1.5em;
+}
 #new_user_submit
 {
 	background: #FFBC00;
@@ -549,6 +561,17 @@ th
 	right: -0.5em;
 	top: -0.6em;
 }
+#optional_photo
+{
+	background: #2980b9;
+	color: white;
+	font-size: 0.8em;
+	text-align: center;
+}
+#optional_photo p
+{
+	margin: 0;
+}
 #patients a:after
 {
 	color: white;
@@ -561,6 +584,10 @@ th
 	height: 187px;
 	margin: 0;
 	width: 250px;
+}
+#photos_holder
+{
+	text-align: center;
 }
 #photo_buttons, #photo_loader
 {
@@ -733,13 +760,6 @@ th
 	border-radius: 0.5em;
 	margin: 0.5em 0; 
     padding: 0.5em;
-}
-#optional_photo
-{
-	background: #2980b9;
-	color: white;
-	font-size: 0.8em;
-	text-align: center;
 }
 #user_label:after
 {
@@ -981,10 +1001,10 @@ th
 {
 	background: white;
 	border-radius: 0.2em 0.2em 0.2em 0.2em;
-	margin: 0 19px;
+	margin: 1em 19px;
 	padding: 0;
 	vertical-align: top;
-	width: auto;
+	
 }
 .fields_holder_chk
 {
@@ -1159,6 +1179,7 @@ th
 {
 	border: 2px solid #3498db;
 	border-radius: 0.7em;
+	display: inline-block;
 	margin: 1.5em 1em 0.5em 1em;
 	position: relative;
 	width: 250px;
